[package]
name = "three-ten-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
zip = "6.0.0"
macros = { path = "./macros" }
prompted = "0.2.8"
ordered-float = { version = "5.1.0", features = ["serde"] }
itertools = "0.14.0"
regex = "1.12.2"
anyhow = "1.0.100"
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
scraper = "0.24.0"
